# AI-research-cartography

./: .env.example  .gitignore  README.md
apps/extraction-service/: pyproject.toml
apps/extraction-service/app/: main.py
apps/extraction-service/app/embeddings/: embed.py
apps/extraction-service/app/llm/: extraction.py  relationships.py
apps/extraction-service/app/pdf/: extract.py
apps/web/: package-lock.json  package.json
apps/web/app/: page.tsx
apps/web/app/api/graph/: route.ts
apps/web/app/api/papers/: route.ts
apps/web/app/api/papers/[id]/: route.ts
apps/web/app/api/papers/[id]/retry/: route.ts
apps/web/app/api/papers/upload/: route.ts
apps/web/app/api/relationships/: route.ts
apps/web/app/board/: page.tsx
apps/web/app/compare/: page.tsx
apps/web/app/papers/: page.tsx
apps/web/app/upload/: page.tsx
apps/web/components/papers/: EmptyState.tsx  PaperList.tsx  PaperRow.tsx  PapersLibrary.tsx  Toolbar.tsx
apps/web/components/preview/: PaperMetadataPreview.tsx
apps/web/lib/: constants.ts  queryKeys.ts  storage.ts
apps/web/lib/api/: papers.test.ts  papers.ts
apps/web/lib/serializers/: paper.ts
apps/web/prisma/: schema.prisma  seed.ts
apps/web/prisma/migrations/20260704141418_init_papers/: migration.sql
apps/web/prisma/migrations/20260705182703_add_storage_key/: migration.sql
apps/web/types/: paper.ts
docs/superpowers/specs/: 2026-07-03-paper-comparison-board-design.md
infra/: docker-compose.yml
spec/: research-paper-cartographer-spec.md
